--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             // FOR THIS CODE TO WORK, you must create a folder named `data`
             // and place the following JSON files inside it.
             const themeFiles = [
-                'dc.json',
+                'dc.json'
             ];
 
             // This function fetches data from all theme-specific JSON files.
