--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             
             <!-- Logo Section with error handling -->
             <div id="logo" class="flex items-center justify-center mb-6">
-                <img src="https://googleusercontent.com/file_content/1" 
+                <img src="./images/logo.png" 
                      onerror="this.onerror=null;this.src='https://placehold.co/200x80/637082/ffffff?text=Your+Logo'" 
                      alt="Your Brand Logo" 
                      class="h-20 w-auto">
