--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
                 <a href="https://www.facebook.com/your-page" target="_blank" class="text-gray-400 hover:text-yellow-500 transition-colors duration-200" title="Facebook">
                     <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.163C6.486 2.163 2 6.273 2 11.233c0 4.437 3.237 8.163 7.558 8.917v-6.353H6.702v-2.564h2.856V9.08c0-2.825 1.63-4.385 4.195-4.385 1.205 0 2.247.09 2.553.13v2.96h-1.65c-1.302 0-1.558.62-1.558 1.53v2.016h3.29l-.527 2.564h-2.763v6.353C18.763 19.396 23 15.67 23 11.233c0-4.96-4.486-9.07-9.917-9.07z"/></svg>
                 </a>
+                <a href="https://t.me/your-username" target="_blank" class="text-gray-400 hover:text-yellow-500 transition-colors duration-200" title="Telegram">
+                    <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm4.35 8.71l-6.52 3.23c-.33.16-.71-.08-.71-.45V9.45c0-.37.38-.61.71-.45l6.52 3.23c.33.17.33.43 0 .6z"/>
+                    </svg>
+                </a>            
             </div>
         </div>
 
