one row specification

--- a/index.html
+++ b/index.html
@@ -243,10 +243,10 @@
                             </div>
                         </div>
                         
-                        <!-- Set Details Section -->
+                        <!-- Set Details Section (now in a single row) -->
                         <div class="bg-gray-100 p-4 rounded-lg shadow-inner mb-6">
                             <h3 class="text-lg font-bold text-gray-800 mb-2">Set Specifications</h3>
-                            <div class="grid grid-cols-2 gap-4 text-gray-700">
+                            <div class="flex flex-wrap gap-4 justify-between text-gray-700">
                                 <div><span class="font-semibold text-gray-800">Year Released:</span> ${set.year}</div>
                                 <div><span class="font-semibold text-gray-800">Piece Count:</span> ${set.pieces}</div>
                                 <div><span class="font-semibold text-gray-800">Minifigures:</span> ${set.minifigs}</div>
