--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 <div id="sets_catalog" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
                     <!-- Set cards will be dynamically populated here -->
-                </div>
+                    </div>
                 <!-- Loading indicator -->
                 <div id="loader" class="flex justify-center my-8 hidden">
                     <div class="loader"></div>
@@ -121,7 +121,7 @@
                 </button>
                 <div id="set_detail_content" class="space-y-4">
                     <!-- Set details will be dynamically populated here -->
-                </div>
+                    </div>
             </div>
         </div>
 
@@ -130,7 +130,7 @@
             <h2 data-translate="connect_title" class="text-2xl font-bold text-gray-800 mb-4">Connect With Me</h2>
             <div class="flex justify-center space-x-6">
                 <a href="https://www.instagram.com/your-username" target="_blank" class="text-gray-400 hover:text-yellow-500 transition-colors duration-200" title="Instagram">
-                    <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.163c3.204 0 3.584.012 4.851.07 1.171.055 1.835.249 2.227.406.408.163.78.4.992.613.21.21.45.584.613.992.157.392.351 1.056.406 2.227.058 1.267.07 1.647.07 4.851s-.012 3.584-.07 4.851c-.055 1.171-.249 1.835-.406 2.227-.163.408-.4.78-.613.992-.21.21-.584.45-.992.613-.392.157-1.056.351-2.227.406-1.267.058-1.647.07-4.851.07s-3.584-.012-4.851-.07c-1.171-.055-1.835-.249-2.227-.406-.408-.163-.78-.4-.992-.613-.21-.21-.45-.584-.613-.992-.157-.392-.351-1.056-.406-2.227-.058-1.267-.07-1.647-.07-4.851s.012-3.584.07-4.851c.055-1.171.249-1.835.406-2.227.163-.408.4-.78.613-.992.21-.21.584-.45.992-.613.392-.157 1.056-.351 2.227-.406 1.267-.058 1.647-.07 4.851-.07zm0-2.163c-3.267 0-3.691.013-4.994.072-1.303.06-2.126.26-2.827.545-.71.291-1.294.757-1.764 1.228-.47.47-.937 1.054-1.228 1.764-.285.701-.485 1.524-.545 2.827-.059 1.303-.072 1.727-.072 4.994s.013 3.691.072 4.994c.06 1.303.26 2.126.545 2.827.291.71.757 1.294 1.228 1.764.47.47 1.054.937 1.764 1.228.701.285 1.524.485 2.827.545 1.303.059 1.727.072 4.994.072s3.691-.013 4.994-.072c1.303-.06 2.126-.26 2.827-.545.71-.291 1.294-.757 1.764-1.228.47-.47.937-1.054 1.228-1.764.285-.701.485-1.524.545-2.827.059-1.303.072-1.727.072-4.994s-.013-3.691-.072-4.994c-.06-1.303-.26-2.126-.545-2.827-.291-.71-.757-1.294-1.228-1.764-.47-.47-1.054-.937-1.764-1.228-.701-.285-1.524-.485-2.827-.545-1.303-.059-1.727-.072-4.994-.072zM12 6.865a5.135 5.135 0 100 10.27 5.135 5.135 0 000-10.27zm0 8.411a3.276 3.276 0 110-6.552 3.276 3.276 0 010 6.552zM16.994 6.883a1.215 1.215 0 100 2.43 1.215 1.215 0 000-2.43z"/></svg>
+                    <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 2.163c3.204 0 3.584.012 4.851.07 1.171.055 1.835.249 2.227.406.408.163.78.4.992.613.21.21.45.584.613.992.157.392.351 1.056.406 2.227.058 1.267.07 1.647.07 4.851s-.012 3.584-.07 4.851c-.055 1.171-.249 1.835-.406 2.227-.163.408-.4.78-.613.992-.21.21-.584.45-.992.613-.392.157-1.056.351-2.227.406-1.267.058-1.647.07-4.851.07s-3.584-.012-4.851-.07c-1.171-.055-1.835-.249-2.227-.406-.408-.163-.78-.4-.992-.613-.21-.21-.45-.584-.613-.992-.157-.392-.351-1.056-.406-2.227-.058-1.267-.07-1.647-.07-4.851s.012-3.584.07-4.851c.055-1.171.249-1.835.406-2.227.163-.408.4-.78.613-.992.21-.21.584-.45.992-.613.392-.157 1.056-.351 2.227-.406 1.267-.058 1.647-.07 4.851-.07zm0-2.163c-3.267 0-3.691.013-4.994.072-1.303.06-2.126.26-2.827.545-.71.291-1.294.757-1.764 1.228-.47.47-.937 1.054-1.228 1.764-.285.701-.485 1.524-.545 2.827-.059 1.303-.072 1.727-.072 4.994s.013 3.691.072 4.994c.06 1.303.26 2.126.545 2.827.291.71.757 1.294 1.228 1.764.47.47 1.054.937 1.764 1.228.701.285 1.524.485 2.827.545 1.303.059 1.727.072 4.994.072s3.691-.013 4.994-.072c1.303-.06 2.126-.26 2.827-.545.71-.291 1.294-.757 1.764-1.228.47-.47.937-1.054 1.764-1.228.285-.701.485-1.524.545-2.827.059-1.303.072-1.727.072-4.994s-.013-3.691-.072-4.994c-.06-1.303-.26-2.126-.545-2.827-.291-.71-.757-1.294-1.228-1.764-.47-.47-1.054-.937-1.764-1.228-.701-.285-1.524-.485-2.827-.545-1.303-.059-1.727-.072-4.994-.072zM12 6.865a5.135 5.135 0 100 10.27 5.135 5.135 0 000-10.27zm0 8.411a3.276 3.276 0 110-6.552 3.276 3.276 0 010 6.552zM16.994 6.883a1.215 1.215 0 100 2.43 1.215 1.215 0 000-2.43z"/></svg>
                 </a>
                 <a href="https://www.youtube.com/your-channel" target="_blank" class="text-gray-400 hover:text-yellow-500 transition-colors duration-200" title="YouTube">
                     <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21.583 6.47c-.201-.762-.75-1.312-1.512-1.513C18.22 4.417 12 4.417 12 4.417S5.78 4.417 3.929 4.957c-.762.201-1.312.75-1.513 1.513C1.85 8.322 1.85 12 1.85 12s0 3.678.566 5.53c.201.762.75 1.312 1.513 1.513C5.78 19.583 12 19.583 12 19.583s6.22 0 8.071-.54c.762-.201 1.312-.75 1.513-1.513.566-1.852.566-5.53.566-5.53s0-3.678-.566-5.53zM9.916 15.228V8.772L15.341 12l-5.425 3.228z"/></svg>
@@ -162,6 +162,7 @@
 
             let allData = {}; // Store the full data object here
             let currentSets = [];
+            let currentSetId = null; // New variable to track the currently displayed set
 
             // This object holds the translations for all static text elements
             const translations = {
@@ -209,7 +210,7 @@
                 }
             };
             
-            // Function to apply translations based on the selected language
+            // Function to apply translations for static elements and re-render dynamic content
             const setLanguage = (lang) => {
                 const translation = translations[lang];
                 document.querySelectorAll('[data-translate]').forEach(element => {
@@ -218,12 +219,16 @@
                         element.textContent = translation[key];
                     }
                 });
-                // Update specific elements that need special handling
                 searchInput.placeholder = translation.search_placeholder;
                 document.querySelector('#sets_catalog').setAttribute('data-no-sets-message', translation.no_sets_found);
                 
-                // Re-render the sets to update the "No sets found" message if needed
+                // Re-render the sets catalog cards to show the correct language
                 loadSets(themeSelect.value, searchInput.value);
+
+                // If a set detail page is currently open, re-render it with the new language
+                if (!setDetailView.classList.contains('hidden') && currentSetId) {
+                    renderSetDetail(currentSetId);
+                }
             };
 
             // This array holds the filenames for each theme's data.
@@ -320,7 +325,8 @@
                 });
             };
 
-            const showSetDetail = (setId) => {
+            // New function to handle the rendering of the individual set detail page
+            const renderSetDetail = (setId) => {
                 const set = allData[themeSelect.value]?.find(s => s.id === setId) || Object.values(allData).flat().find(s => s.id === setId);
                 if (set) {
                     const currentLang = langSelect.value;
@@ -382,13 +388,18 @@
                             thumbnail.classList.add('active');
                         });
                     });
-
-                    catalogView.classList.add('hidden');
-                    setDetailView.classList.remove('hidden');
                 }
             };
 
+            const showSetDetail = (setId) => {
+                currentSetId = setId;
+                renderSetDetail(setId); // Call the new render function
+                catalogView.classList.add('hidden');
+                setDetailView.classList.remove('hidden');
+            };
+
             const showCatalog = () => {
+                currentSetId = null; // Clear the current set ID
                 setDetailView.classList.add('hidden');
                 catalogView.classList.remove('hidden');
             };
