fix youtube link

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <a href="https://www.instagram.com/brickfolder" target="_blank" class="p-1 transition-all duration-200 border-2 border-transparent rounded-md hover:border-yellow-500" title="Instagram">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/instagram.svg" class="w-8 h-8" alt="Instagram Logo">
             </a>
-            <a href="https://www.youtube.com/brickfolder" target="_blank" class="p-1 transition-all duration-200 border-2 border-transparent rounded-md hover:border-yellow-500" title="YouTube">
+            <a href="https://www.youtube.com/@BrickFolder" target="_blank" class="p-1 transition-all duration-200 border-2 border-transparent rounded-md hover:border-yellow-500" title="YouTube">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/youtube.svg" class="w-8 h-8" alt="YouTube Logo">
             </a>
             <a href="https://www.facebook.com/brickfolder" target="_blank" class="p-1 transition-all duration-200 border-2 border-transparent rounded-md hover:border-yellow-500" title="Facebook">
