update images path

--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@
         <h2 data-translate="connect_title" class="text-2xl font-bold text-gray-800 mb-4">Connect With Me</h2>
         <div class="flex justify-center space-x-6">
             <a href="https://www.instagram.com/brickfolder" target="_blank" class="p-1 transition-all duration-200 border-2 border-transparent rounded-md hover:border-yellow-500" title="Instagram">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/instagram.svg" class="w-8 h-8" alt="Instagram Logo">
+                <img src="./images/instagram.svg" class="w-8 h-8" alt="Instagram Logo">
             </a>
             <a href="https://www.youtube.com/@BrickFolder" target="_blank" class="p-1 transition-all duration-200 border-2 border-transparent rounded-md hover:border-yellow-500" title="YouTube">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/youtube.svg" class="w-8 h-8" alt="YouTube Logo">
+                <img src="./images/youtube.svg" class="w-8 h-8" alt="YouTube Logo">
             </a>
             <a href="https://www.facebook.com/brickfolder" target="_blank" class="p-1 transition-all duration-200 border-2 border-transparent rounded-md hover:border-yellow-500" title="Facebook">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/facebook.svg" class="w-8 h-8" alt="Facebook Logo">
+                <img src="./images/facebook.svg" class="w-8 h-8" alt="Facebook Logo">
             </a>
             <a href="https://t.me/brickfolder" target="_blank" class="p-1 transition-all duration-200 border-2 border-transparent rounded-md hover:border-yellow-500" title="Telegram">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v5/icons/telegram.svg" class="w-8 h-8" alt="Telegram Logo">
+                <img src="./images/telegram.svg" class="w-8 h-8" alt="Telegram Logo">
             </a>
         </div>
     </div>
