update video link and year

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                             </div>` : ''}
                             ${set.year ? `<div class="flex-1 min-w-[150px]">
                                 <p class="text-sm font-semibold">${t.year_released}</p>
-                                <p class="text-xl font-bold">${set.yearReleased}</p>
+                                <p class="text-xl font-bold">${set.year}</p>
                             </div>` : ''}
                             ${set.age ? `<div class="flex-1 min-w-[150px]">
                                 <p class="text-sm font-semibold">${t.age}</p>
