update bricklink section

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
             </div>
             
             <!-- BrickLink Store Splash Section -->
-            <!-- ADDED 'max-w-4xl mx-auto' to make this section narrower and centered -->
-            <div id="store_splash" class="bg-gray-100 p-6 md:p-8 rounded-xl shadow-inner mb-6 text-center max-w-4xl mx-auto">
+            <!-- ADD 'max-w-4xl mx-auto' after text-center to make this section narrower and centered -->
+            <div id="store_splash" class="bg-gray-100 p-6 md:p-8 rounded-xl shadow-inner mb-6 text-center">
                 <h2 data-translate="store_title" class="text-2xl font-bold text-gray-800 mb-2">Visit My BrickLink Store!</h2>
                 <p data-translate="store_text" class="text-gray-600 mb-4">
                     Find new and used LEGO sets, parts, and minifigures in my store. I offer a wide selection and great prices.
