update with one piece only

--- a/index.html
+++ b/index.html
@@ -340,9 +340,7 @@
 
             // This array holds the filenames for each theme's data.
             const themeFiles = [
-                'dc.json',
-                'harry_potter.json',
-                "one_piece.json"
+                "one_piece.json" //, ""
             ];
 
             // This function fetches data from all theme-specific JSON files.
