--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 
             // This array holds the filenames for each theme's data.
             const themeFiles = [
-                "one_piece.json" //, ""
+                "one_piece_1.json" //, ""
             ];
 
             // This function fetches data from all theme-specific JSON files.
