--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@
             // This array holds the filenames for each theme's data.
             // In a real-world app, this would likely be fetched from an API.
             const themeFiles = [
-                "one_piece.json"
+                "one_piece.json",
+                "animal_crossing.json"
             ];
 
             // This function fetches data from all theme-specific JSON files.
