update with brickowl

--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
                 </div>
             </div>
             
-            <!-- BrickLink Store Splash Section -->
+            <!-- BrickOwl Store Splash Section -->
             <!-- ADD 'max-w-4xl mx-auto' after text-center to make this section narrower and centered -->
             <div id="store_splash" class="bg-gray-100 p-6 md:p-8 rounded-xl shadow-inner mb-6 text-center">
-                <h2 data-translate="store_title" class="text-2xl font-bold text-gray-800 mb-2">Visit My BrickLink Store!</h2>
+                <h2 data-translate="store_title" class="text-2xl font-bold text-gray-800 mb-2">Visit My BrickOwl Store!</h2>
                 <p data-translate="store_text" class="text-gray-600 mb-4">
                     Find new and used LEGO sets, parts, and minifigures in my store. I offer a wide selection and great prices.
                 </p>
-                <a href="https://store.bricklink.com/BrickFolder#/shop" target="_blank" data-translate="store_button" class="inline-block px-6 py-3 bg-yellow-500 text-white font-semibold rounded-md shadow-md hover:bg-yellow-600 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:ring-offset-2 transition-colors duration-200">
+                <a href="https://brickfolder.brickowl.com" target="_blank" data-translate="store_button" class="inline-block px-6 py-3 bg-yellow-500 text-white font-semibold rounded-md shadow-md hover:bg-yellow-600 focus:outline-none focus:ring-2 focus:ring-yellow-400 focus:ring-offset-2 transition-colors duration-200">
                     Go to the Store
                 </a>
             </div>
@@ -281,7 +281,7 @@
 
             const translations = {
                 en: {
-                    store_title: "Visit My BrickLink Store!",
+                    store_title: "Visit My BrickOwl Store!",
                     store_text: "Find new and used LEGO sets, parts, and minifigures in my store. I offer a wide selection and great prices.",
                     store_button: "Go to the Store",
                     catalog_title: "My LEGO Sets Catalog",
@@ -306,7 +306,7 @@
                     no_videos_found: "No videos available for this set."
                 },
                 ua: {
-                    store_title: "Відвідайте мій магазин на BrickLink!",
+                    store_title: "Відвідайте мій магазин на BrickOwl!",
                     store_text: "Знайдіть нові та вживані набори LEGO, деталі та мініфігурки в моєму магазині. Я пропоную широкий вибір і чудові ціни.",
                     store_button: "Перейти до магазину",
                     catalog_title: "Мій каталог наборів LEGO",
