--- a/index.html
+++ b/index.html
@@ -469,7 +469,8 @@
                     card.className = 'card';
                     card.setAttribute('data-id', set.id);
                     card.innerHTML = `
-                        <img src="${set.images[0]}" alt="${set.name[currentLang]}" class="w-full h-48 object-cover rounded-lg mb-4">
+                        <!-- FIX: Changed 'object-cover' to 'object-contain' to ensure the full image is visible, preventing cropping. -->
+                        <img src="${set.images[0]}" alt="${set.name[currentLang]}" class="w-full h-48 object-contain rounded-lg mb-4">
                         <h3 class="text-lg font-bold">${set.name[currentLang]}</h3>
                         <p class="text-sm text-gray-600">${set.description[currentLang].substring(0, 100)}${set.description[currentLang].length > 100 ? '...' : ''}</p>
                     `;
